[package]
name = "tide-demo"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tide = "0.4"
mobc = { version = "0.2", default-features=false, features=["async-std-runtime"] }
async-std = "1.0"